ingress-kubecost-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: monitoring
  name: kubecost-anxl
  namespace: kubecost
spec:
  ingressClassName: alb
  rules:
  - host: kubecost-preprod.anxilla.com
    http:
      paths:
      - backend:
          service:
            name: kubecost-cost-analyzer
            port:
              number: 9090
        path: /*
        pathType: ImplementationSpecific
